--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="classification.html">Classification</a></li>
             <li><a href="characteristics.html">Characteristics</a></li>
             <li><a href="reproduction.html">Reproduction</a></li>
+            <li><a href="testpage.html">Reproduction</a></li>
     	</ul>
     </aside>
     
