--- a/reproduction.html
+++ b/reproduction.html
@@ -14,10 +14,11 @@
     <aside id="sidebar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="behavior.html">Behavior</a></li>
-        <li><a href="classification.html">Classification</a></li>
-        <li><a href="characteristics.html">Characteristics</a></li>
-        <li><a href="reproduction.html">Reproduction</a></li>
+            <li><a href="behavior.html">Behavior</a></li>
+            <li><a href="classification.html">Classification</a></li>
+            <li><a href="characteristics.html">Characteristics</a></li>
+            <li><a href="reproduction.html">Reproduction</a></li>
+            <li><a href="testpage.html">Test Page</a></li>
     </ul>
     </aside>
     
